register and logout

--- a/frontend/src/app/access/views/logout/logout.component.html
+++ b/frontend/src/app/access/views/logout/logout.component.html
@@ -1,1 +1,8 @@
-<p>logout works!</p>
+<div class="divider d-flex align-items-center my-4">
+    <p class="text-center fw-bold mx-3 mb-0">Su sesión de ha cerrado</p>
+</div>
+<div class="row">
+    <div class="col-md-4 offset-md-4 col-sm-12 text-center">
+        <button class="btn btn-primary form-control" [routerLink]="['/access']">Ir al login</button>
+    </div>
+</div>
