--- a/frontend/src/app/access/views/register/register.component.html
+++ b/frontend/src/app/access/views/register/register.component.html
@@ -1,1 +1,39 @@
-<p>register works!</p>
+<div class="divider d-flex align-items-center my-4">
+    <p class="text-center fw-bold mx-3 mb-0">Registro de usuario</p>
+</div>
+<form [formGroup]="fRegister" class="was-validated mb-4" (ngSubmit)="submitForm()">
+
+    <!-- Email input -->
+    <div class="form-outline mb-4">
+        <input type="email" id="in-email" formControlName="email" class="form-control form-control-lg"
+            placeholder="mail@mail.com" />
+        <label class="form-label" for="in-email">Email</label>
+    </div>
+
+    <!-- Password input -->
+    <div class="form-outline mb-4">
+        <input type="password" id="in-password" formControlName="password" class="form-control form-control-lg"
+            placeholder="*****" />
+        <div class="invalid-feedback">
+            Please provide a valid city.
+        </div>
+        <label class="form-label" for="in-password">Contraseña</label>
+    </div>
+    <!-- Rol select -->
+    <div class="form-outline mb-3">
+        <select id="in-rol" formControlName="rol" class="form-control form-control-lg">
+            <option value="">--Selecccione un rol--</option>
+            <option value="1">Admin</option>
+            <option value="2">Usuario</option>
+        </select>
+        <label class="form-label" for="in-rol">Contraseña</label>
+    </div>
+
+    <div class="text-center text-lg-start mt-4 pt-2">
+        <button type="submit" class="btn btn-primary btn-lg"
+            style="padding-left: 2.5rem; padding-right: 2.5rem;">Registrar</button>
+        <p class="small fw-bold mt-2 pt-1 mb-5">Ya tiene cuenta? <a [routerLink]="['/access']"
+                class="link-danger">Login</a></p>
+    </div>
+
+</form>
